system js tools

--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -11,12 +11,17 @@
 
 <script>
 
- 
+$().ready( function() { 
+    
+} ); 
 
 </script>
 
 </HEAD>
 <BODY>
+<H1>Yote Admin</H1>
+
+<div id=apps></div>
 
 </BODY>
 </HTML>
