--- a/yote_root/html/yote/sample/secret_collect.html
+++ b/yote_root/html/yote/sample/secret_collect.html
@@ -14,7 +14,7 @@
         $('#insert_questions_div').hide();
         $('#guess_div').hide();
 
-        var secret_collect = $.yote.get_app('Yote::Sample::SecretCollect');
+        var secret_collect = $.yote.fetch_app('Yote::Sample::SecretCollect');
 
         var collectible_riddle;
 
