fixed login object bugs

--- a/yote_root/html/yote/sample/secret_collect.html
+++ b/yote_root/html/yote/sample/secret_collect.html
@@ -1,20 +1,22 @@
 <html>
   <head>
     <title>Secret Collect</title>
-    <script src="../javascript/jquery-latest.js"></script>
-    <script src="../javascript/jquery.dumper.js"></script>
-    <script src="../javascript/jquery.cookie.js"></script>
-    <script src="../javascript/jquery.base64.min.js"></script>
-    <script src="../javascript/json2.js"></script>
-    <script src="../javascript/yote.js"></script>
-    <script src="../javascript/yote.util.js"></script>
+    <script src="/yote/js/jquery-latest.js"></script>
+    <script src="/yote/js/jquery.cookie.js"></script>
+    <script src="/yote/js/jquery.dumper.js"></script>
+    <script src="/yote/js/jquery.base64.min.js"></script>
+    <script src="/yote/js/json2.js"></script>
+    <script src="/yote/js/yote.js"></script>
+    <script src="/yote/js/yote.util.js"></script>
     <script>
     $().ready(function(){
+        $.yote.debug = true;
         $('#play_div').hide();
         $('#insert_questions_div').hide();
         $('#guess_div').hide();
-
-        var secret_collect = $.yote.fetch_app('Yote::Sample::SecretCollect');
+    
+	var root = $.yote.fetch_root();
+        var secret_collect = root.fetch_app_by_class('Yote::Sample::SecretCollect');
 
         var collectible_riddle;
 
