added multi load feature

--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -11,7 +11,7 @@
     <script src="/yote/js/yote.util.js"></script>
     <script src="/yote/js/yote.system.util.js"></script>
 
-<script>
+<script lang="javascript">
 
 $().ready( function() { 
     function show_system() {
