--- a/yote_root/html/yote/obj_explore.html
+++ b/yote_root/html/yote/obj_explore.html
@@ -1,18 +1,20 @@
 <html>
   <head>
 <title>Yote Object Explorer</title>
-<script src="../js/jquery-latest.js"></script>
-<script src="../js/jquery.dumper.js"></script>
-<script src="../js/jquery.base64.min.js"></script>
-<script src="../js/json2.js"></script>
-<script src="../js/yote/yote.js"></script>
-<script src="../js/yote/yote.util.js"></script>
+
+<script src="/yote/js/jquery-latest.js"></script>
+<script src="/yote/js/jquery.cookie.js"></script>
+<script src="/yote/js/jquery.dumper.js"></script>
+<script src="/yote/js/jquery.base64.min.js"></script>
+<script src="/yote/js/json2.js"></script>
+<script src="/yote/js/yote.js"></script>
+<script src="/yote/js/yote.util.js"></script>
+
 <script>
    $().ready(function(){ 
-       console.dir( $('#foobla' ).length );
-       console.dir( $('#root' ) );
+       $.yote.debug = true;
        function show_header( name, obj, attachpoint ) {
-	   obj.load_direct_descendents();
+//	   obj.load_direct_descendents();
 	   var plus_id = $.yote.util.next_id();
 	   var list_id = $.yote.util.next_id();
 	   attachpoint.append( '<span><a id="a_' + obj.id + '" name="a_' + obj.id + '">name</a></span> <span id=' + plus_id +
