unit tests - changed console.dir to console.log. util, added method in table to create a row where the first column is a th rather than a td

--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -56,7 +56,7 @@ function wrap_up() {
 }
 var step_count = 0;
 function step( msg ) {
-    console.dir( "step " + step_count + ':' + msg  );
+    console.log( "step " + step_count + ':' + msg  );
     step_count++;
 }
 $().ready(function(){ 
