--- a/yote_root/html/yote/index.html
+++ b/yote_root/html/yote/index.html
@@ -9,8 +9,8 @@
     <script src="/yote/js/json2.js"></script>
     <script src="/yote/js/yote.js"></script>
     <script src="/yote/js/yote.util.js"></script>
-    <script src="/yote/js/yote.system.util.js"></script>
-
+    <script src="/yote/js/yote.system.ustil.js"></script>
+    <script src="/yote/js/jquery.upload-1.0.2.js"></script>
 <script lang="javascript">
 
 $().ready( function() { 
@@ -28,8 +28,18 @@ $().ready( function() {
     $.yote.util.make_login_box({ target:'#login',
                                  on_in:function() { show_system() },
                                  require_root:1 });
-} ); 
-
+    $( '#scratch' ).append( '<HR><input type=file id="fileup2" name="file"> <button type=button id=fileup_b2>Upload</button>' );
+    var tanl_app = $.yote.fetch_app( 'Yote::Test::TestAppNoLogin' );
+    $( '#fileup_b2' ).click( function() {
+	tanl_app.Upload( { somevar : 'someval', 
+			   somefile : $.yote.upload( '#fileup2' ) },
+			 function() {
+			     //refresh the app for now. build in autorefresh later
+			     tanl_app = $.yote.fetch_app( 'Yote::Test::TestAppNoLogin' );
+			     $( '#scratch' ).append( '<img src=' + tanl_app.get_File().Url() + ">" );
+			 } );
+    } );
+} );
 </script>
 
 </HEAD>
@@ -41,6 +51,9 @@ $().ready( function() {
  <div id=apps>  
  </div>
 </div>
+
+ <div id=scratch>
+ </div>
 
 </BODY>
 </HTML>
